[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-lcp = { git = "https://github.com/akmami/rust-lcp.git" }
seq_io = { git = "https://github.com/markschl/seq_io" }


[[bin]]
name = "main"
path = "src/main.rs"